--- a/preview/backend/src/main/twirl/login.scala.html
+++ b/preview/backend/src/main/twirl/login.scala.html
@@ -34,5 +34,7 @@
   <div class="ui item"  data-showif="isSigned">
     <div class="ui green button" data-event-click="logoutClick">Log out</div>
   </div>
-
+ @* <div class="ui item" >
+    <div class="ui red button" data-event-click="testClick">TEST</div>
+  </div>*@
 </nav>
