improved ui part

--- a/preview/backend/src/main/twirl/login.scala.html
+++ b/preview/backend/src/main/twirl/login.scala.html
@@ -1,10 +1,10 @@
 <nav class="ui fluid vertical menu" data-view="login">
 
-  <div id="message" class="ui item" data-bind="message">
+  <div id="message" class="ui negative message item" data-bind="message" data-showif="hasMessage">
     </div>
 
   <div class="ui icon input item" data-hideif="isSigned">
-    <input id="login" type="text" placeholder="login" data-bind="login">
+    <input id="login" type="text" placeholder="username" data-bind="username">
     <i data-class-icon-if="validUsername" class="checkmark green sign"></i>
   </div>
 
@@ -22,19 +22,26 @@
     <input type="password" data-bind="repeat" placeholder="repeat password"><i data-class-icon-if="samePassword" class="checkmark green sign"></i>
   </div>
 
-  <div class="ui item toggle buttons" data-hideif="isSigned">
-    <div id="loginBtn" class="ui small button"   data-class="loginClass" data-event-click="loginClick">Login</div>
+  <div class="ui positive small message item" data-showif="wantsLogin">
+      Click on <i>Login</i> will sign in
+  </div>
+
+  <div class="ui positive small message item" data-showif="wantsRegistration">
+      Click on <i>Sign up</i> will register
+  </div>
+
+  <div class="ui small buttons" data-hideif="isSigned">
+    <button id="loginBtn" class="ui small button"  data-class="loginClass" data-event-click="loginClick">Login</button>
     <div class="or"></div>
-    <div id="registerBtn" class="ui small button" data-class="signupClass" data-event-click="signupClick">Sign up</div>
+    <button  id="registerBtn" class="ui small button" data-class="signupClass" data-event-click="signupClick">Sign up</button>
   </div>
 
   <div class="ui item"  data-showif="isSigned">
         Logged in as <span data-bind="registeredName"></span>
-    </div>
+  </div>
+
   <div class="ui item"  data-showif="isSigned">
     <div class="ui green button" data-event-click="logoutClick">Log out</div>
   </div>
- @* <div class="ui item" >
-    <div class="ui red button" data-event-click="testClick">TEST</div>
-  </div>*@
+
 </nav>
