--- a/preview/backend/src/main/twirl/login.scala.html
+++ b/preview/backend/src/main/twirl/login.scala.html
@@ -1,6 +1,6 @@
 <nav class="ui fluid vertical menu" data-view="login">
 
-  <div id="message" class="ui negative message item" data-bind="message" data-showif="hasMessage">
+  <div id="message" class="ui negative message" data-bind="message" data-showif="hasMessage">
     </div>
 
   <div class="ui icon input item" data-hideif="isSigned">
@@ -22,18 +22,18 @@
     <input type="password" data-bind="repeat" placeholder="repeat password"><i data-class-icon-if="samePassword" class="checkmark green sign"></i>
   </div>
 
+  <div class="ui small buttons" data-hideif="isSigned">
+    <button id="loginBtn" class="ui small button"  data-class="loginClass" data-event-click="loginClick">Login</button>
+    <div class="or"></div>
+    <button  id="registerBtn" class="ui small button" data-class="signupClass" data-event-click="signupClick">Sign up</button>
+  </div>
+
   <div class="ui positive small message item" data-showif="wantsLogin">
       Click on <i>Login</i> will sign in
   </div>
 
   <div class="ui positive small message item" data-showif="wantsRegistration">
       Click on <i>Sign up</i> will register
-  </div>
-
-  <div class="ui small buttons" data-hideif="isSigned">
-    <button id="loginBtn" class="ui small button"  data-class="loginClass" data-event-click="loginClick">Login</button>
-    <div class="or"></div>
-    <button  id="registerBtn" class="ui small button" data-class="signupClass" data-event-click="signupClick">Sign up</button>
   </div>
 
   <div class="ui item"  data-showif="isSigned">
