--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ span.hljs-tag, span.hljs-symbol{
     <p>
         Just add the library to your sbt dependencies:</p>
     <pre><code class="scala scalatex-site-Styles-highlightMe">resolvers += sbt.Resolver.bintrayRepo(&quot;denigma&quot;, &quot;denigma-releases&quot;),
-libraryDependencies += &quot;org.denigma&quot; %%% &quot;akka-http-extensions&quot; % &quot;0.0.5-RC4&quot;</code></pre>
+libraryDependencies += &quot;org.denigma&quot; %%% &quot;akka-http-extensions&quot; % &quot;0.0.5&quot;</code></pre>
     <p>
         Then you can simply extend AuthDirectives in your routes.
 </p>
@@ -101,9 +101,9 @@ libraryDependencies += &quot;org.denigma&quot; %%% &quot;akka-http-extensions&qu
                     userByToken:String=&gt;Option[LoginInfo],
                     makeToken:LoginInfo=&gt;Future[String]
                     ) extends AuthDirectives
-                  with Directives
-                  with WithLoginRejections
-                  with WithRegistrationRejections
+with Directives
+with WithLoginRejections
+with WithRegistrationRejections
 {
   def routes: Route =
     pathPrefix(&quot;users&quot;) {
@@ -130,10 +130,15 @@ libraryDependencies += &quot;org.denigma&quot; %%% &quot;akka-http-extensions&qu
           }
         } ~
         pathPrefix(&quot;logout&quot;) {
-          deleteCookie(&quot;token&quot;) { c =&gt;
+          logout{ c =&gt;
             c.complete(s&quot;The user was logged out&quot;)
+          }
+        } ~
+        pathPrefix(&quot;status&quot;){
+          this.authenticate(userByToken){user=&gt;
+            complete(user.username)
+          }
         }
-      }
     }
 }</code></pre>
     <h1 id="Pjaxsupport" style="display: block;" class=" scalatex-site-Styles-hoverContainer scalatex-site-Styles-headerTag"><a class=" scalatex-site-Styles-headerLink" href="#Pjaxsupport" style="position: absolute;right: 0px;"><i class="fa fa-link"></i></a>Pjax support</h1>
@@ -237,4 +242,4 @@ Open localhost:1234 to see the result, it should reload whenever any sources are
         );
       })
     })
-  </script></body></html>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                
+  </script></body></html>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       
