--- a/preview/backend/src/main/twirl/libs.scala.html
+++ b/preview/backend/src/main/twirl/libs.scala.html
@@ -1,8 +1,5 @@
 <link rel="stylesheet" href="/styles/mystyles.css" />
-<script type="text/javascript" src="/lib/jquery/jquery.min.js">
-</script><link rel="stylesheet" href="/lib/selectize.js/css/selectize.css" />
-<link rel="stylesheet" href="/lib/selectize.js/css/selectize.default.css" />
-<script type="text/javascript" src="/lib/selectize.js/js/standalone/selectize.js"></script>
+<script type="text/javascript" src="/lib/jquery/jquery.min.js"></script>
 <link rel="stylesheet" href="/lib/Semantic-UI/semantic.css" />
 <script type="text/javascript" src="/lib/Semantic-UI/semantic.js"></script>
 <link rel="stylesheet" href="/lib/codemirror/lib/codemirror.css" type="text/css">
